adjusted for authorisation (#1)
* adjusted for authorisation
add missing test for service and controller

* corrections
adjusted for authorisation
add missing test for service and controller

* corrections #2
adjusted for authorisation
add missing test for service and controller